--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -423,13 +423,14 @@
     <!-- MMS user agent prolfile url -->
     <string name="config_mms_user_agent_profile_url" translatable="false">http://wap1.huawei.com/uaprof/HUAWEI_angler-Uaprofile.xml</string>
 
+
     <!-- Permit doze mode to operate -->
     <bool name="config_enableAutoPowerModes">true</bool>
 
     <!-- Whether device supports double tap to wake -->
     <bool name="config_supportDoubleTapWake">true</bool>
 
-<!-- Hardware "softkeys" present on the device, stored as a bit field.
+    <!-- Hardware "softkeys" present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following keys present:
             1 - Home
@@ -460,4 +461,6 @@
         <item>com.google.android.apps.tycho</item>
     </string-array>
 
+    <!-- enable doze powersaving mode -->
+    <bool name="config_enableAutoPowerModes">true</bool>
 </resources>
