overlay: consider fast charging above 1300mA/h for angler
Keyguard and battery LED

Slow charge : 0 - 500
Normal charge : 500 - 1300
Fast charge : 1300+

Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -476,4 +476,7 @@
     <!-- Whether device supports lockscreen rotation -->
     <bool name="config_enableLockScreenRotation">true</bool>
 
+    <!-- BatteryLED fast charge -->
+    <integer name="config_chargingFastThreshold">1300000</integer>
+
 </resources>
