--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -27,4 +27,6 @@
     <bool name="config_allow_hfa_outside_of_setup_wizard">false</bool>
     <!-- Show Hearing aids option in  Call Settings -->
     <bool name="hac_enabled">true</bool>
+    <!-- Show APN Settings for some CDMA carriers -->
+    <bool name="config_show_apn_setting_cdma">true</bool>
 </resources>
